# MCP

./: .gitignore  README.md
Composite SKU MCP/: ecosystem.config.cjs  package-lock.json  package.json
Composite SKU MCP/slack-bot/: package.json
Composite SKU MCP/src/: cli.ts  referenceData.ts  validator.ts
Composite SKU/config/: skus.json
Composite SKU/mcp-server/: package-lock.json
Composite SKU/scripts/: setup-ec2.sh
Composite SKU/slack-bot/: package-lock.json
Composite SKU/src/: types.ts
Intelligent MCP/: .env.composite.example  .env.example  README.md  package-lock.json  package.json
Intelligent MCP/SPI MCP/: package.json  tsconfig.json
Intelligent MCP/SPI MCP Vibe/: README.md  package-lock.json  package.json
Intelligent MCP/infra/: deploy-prod.sh  template-vibe-oauth.yaml  template.yaml
Intelligent MCP/ops/: generate-context-index.mjs  refresh-metric-artifacts.mjs  smoke-check.sh  sync-context.sh
Intelligent MCP/resources/: column_dictionary.example.json  context_assets_index.json  context_registry.json  (+6 more)
composite mcp/: README.md
mlctl/: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  setup_and_run.sh
mlctl/.devcontainer/: devcontainer.json
mlctl/db/: query_engine.py  setup.py
mlctl/examples/: demo.py
mlctl/mlctl/: __init__.py  core.py
mlctl/mlctl/adapters/: __init__.py  model_adapter.py
mlctl/mlctl/agent/: orchestrator.py
mlctl/mlctl/tools/: __init__.py  experiments.py  models.py  pipelines.py
mlctl/mock/: __init__.py  platform_mock.py
mlctl/web/: app.py
mlctl/web/templates/: index.html
(+82 files in other folders)
